2020-01-09  Markus Gans  <guru.mail@muenster.de>
	* The setCurrentItem() method was added to the FComboBox widget class.
	  Thanks cybin for the sample code

2020-01-03  Markus Gans  <guru.mail@muenster.de>
	* Illustrations to explain the widget layout

2019-12-31  Markus Gans  <guru.mail@muenster.de>
	* The new SGRoptimizer class allows several consecutive parameters 
	  from the SGR (Select Graphic Rendition) attributes to be combined 
	  into one

2019-12-23  Markus Gans  <guru.mail@muenster.de>
	* Correction for height and width alignment in adjustSize()
	* Better setSize() implementation in some widgets

2019-12-20  Markus Gans  <guru.mail@muenster.de>
	* Fixed the drawing of FLabel widget with the default size 
	  of 1×1 character.
	  Thanks to terranpro for reporting this issue

2019-12-16  Markus Gans  <guru.mail@muenster.de>
	* New widget class FComboBox to provide a dropdown list 
	  with an input field

2019-11-17  Markus Gans  <guru.mail@muenster.de>
	* Revision of FString number input stream

2019-11-16  Markus Gans  <guru.mail@muenster.de>
	* New Widget class FSpinBox to provide spin boxes

2019-11-06  Markus Gans  <guru.mail@muenster.de>
	* Improved display of the NewFont midline 

2019-11-03  Markus Gans  <guru.mail@muenster.de>
	* Newfont specialization for 8x16 and 9x16 pixel character
	* Fixes the display of reverse characters on the 16 color 
	  Linux console

2019-10-28  Markus Gans  <guru.mail@muenster.de>
	* Unicode support for 8x16graph font

2019-10-20  Markus Gans  <guru.mail@muenster.de>
	* New method setInputType() in FLineEdit that allows to obscure 
	  password entries
	* FAcceleratorList reimplemented as non-pointer

2019-10-15  Markus Gans  <guru.mail@muenster.de>
	* Version 0.6.0

2019-10-13  Markus Gans  <guru.mail@muenster.de>
	* Compile fix for Cygwin and Linux on arm architectures
	* A small color palette optimization
	* Corrected east asian ambiguous character width for OpenBSD, NetBSD, 
	  FreeBSD and Solaris
